--- a/style.css
+++ b/style.css
@@ -14,21 +14,26 @@ h1 {
     padding: 20px;
     font-size: 25px;
     font-family: monospace, Cambria, sans-serif;
-    height: 100px;
-    margin: 0 auto;
+    min-height: 100px;
+    margin: 50px auto;
+    display:flex;
+    flex-wrap: wrap;
     }
 
 nav {
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     }
 
 ul {
     display:flex;
+    flex-wrap: wrap;
     list-style-type: none;
 }
 
 li {
+    padding: 15px;
     width: 150px;
     font-size: 25px;
     list-style-type: none;
@@ -39,9 +44,7 @@ li {
     width: 90%;
     padding: 25px;
     margin: 50px auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly
+
     
 }
 
@@ -52,9 +55,10 @@ li {
 }
 
 section {
-    height:400px;
-    background-color: tan;
+    max-width: 60rem;
+    padding: 40px;
     border: solid black 5px;
+    border-style: double;
 }
 
 footer {
@@ -62,8 +66,28 @@ footer {
     background-color: black;
 }
 
- @media (min-width: 768px) {
+@media (max-width:992px) {
+    .hero {
+        background-color: aqua;
+        display:block;
+    }
+    
+    .container {
+        background-color: aqua;
+        display:block
+    }
 
- }
+}
 
- @media ()
+@media (max-width 576px) {
+    .hero {
+        background-color: aqua;
+        display:block;
+    }
+    
+    .container {
+        background-color: aqua;
+        display:block
+    }
+
+}
