--- a/style.css
+++ b/style.css
@@ -37,17 +37,19 @@ li {
     width: 150px;
     font-size: 25px;
     list-style-type: none;
-    
-}
+    }
 
 .container {
     width: 90%;
     padding: 25px;
     margin: 50px auto;
-
-    
 }
 
+.container p {
+    font-size: 20px;
+    font-style: oblique;
+    color: black;
+}
 
 #worksection .projectimage:hover img {
     transform: scale(1.3,1.3);
