--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ li {
     font-style: oblique;
     color: black;
 }
-
+/* This code dictates image behaviour */
 #worksection .projectimage:hover img {
     transform: scale(1.3,1.3);
     z-index: 2;
